Update Open Graph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://artechfuz3d.github.io/YoutubeLinks/">
     <meta property="og:title" content="Your Name - YouTube & Links">
     <meta property="og:description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
-    <meta property="og:image" content="https://artechfuz3d.github.io/YoutubeLinks/preview.png">
+    <meta property="og:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yourusername.github.io/">
+    <meta property="twitter:url" content="https://artechfuz3d.github.io/">
     <meta property="twitter:title" content="ArtechFuz3D - YouTube Links">
     <meta property="twitter:description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
-    <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/preview.png">
+    <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.pn">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -67,6 +67,7 @@
             height: 120px;
             border-radius: 50%;
             background: #FF0000;
+            background-image: url('artechfuz3d-orb-logo.svg');
             margin: 0 auto 20px;
             display: flex;
             align-items: center;
