Update meta title for YouTube links page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Name - YouTube & Links</title>
     
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Your Name - YouTube & Links">
+    <meta name="title" content="ArtechFuz3D - YouTube Links">
     <meta name="description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
     <meta name="author" content="https://artechfuz3d.github.io/YoutubeLinks/">
     <meta name="keywords" content="youtube, content creator, videos, subscribe, links">
@@ -14,7 +14,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://artechfuz3d.github.io/YoutubeLinks/">
-    <meta property="og:title" content="Your Name - YouTube & Links">
+    <meta property="og:title" content="ArtechFuz3D - YouTube Links">
     <meta property="og:description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
     <meta property="og:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
     
