--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="https://artechfuz3d.github.io/YoutubeLinks//favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://artechfuz3d.github.io/YoutubeLinks//android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://artechfuz3d.github.io/YoutubeLinks//android-chrome-192x192.png">
+    <link rel="icon" type="image/ico" href="https://artechfuz3d.github.io/YoutubeLinks/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="manifest" href="site.webmanifest">
     <meta name="robots" content="index, follow">
