--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - YouTube & Links</title>
+    <title>ArtechFuz3D - YouTube Links</title>
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="ArtechFuz3D - YouTube Links">
